--- a/.htaccess
+++ b/.htaccess
@@ -8,6 +8,7 @@ RewriteRule ^ http%1://www.%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
 RewriteEngine On
 RewriteCond %{SCRIPT_FILENAME} !-d
 RewriteRule ^([^\.]+)$ $1.php [NC,L]
+RewriteRule ^([^\.]+)$ $1.html [NC,L]
 
 #NOTE: The items below are not part of the remove .html or .php but I think you should use them as the optimize the proformace or your site. You can delete them if you like.
 
